--- a/app/views/user/work/sell.html
+++ b/app/views/user/work/sell.html
@@ -933,6 +933,49 @@
 		</div>
 	</div>
 
+
+	<a id="go-share-modal" href="#share-modal">HOLI!</a>
+
+	<div id="share-modal" style="display: none;">
+		<i class="closed-modal fa fa-times"></i>
+		
+		<div class="am-profile" style="padding: 0;">
+
+			<div class="grid-container" style="padding: 0;">
+				<div class="grid-100 grid-parent">
+
+					<div class="am-profile-box grid-container">
+						<form class="complete-form">
+
+							<div class="separator main u-margin-top-30">
+								<span class="line" style="height: 2px;"></span><span class="text">OBRA ORIGINAL<br>EN VENTA</span><span class="line" style="height: 2px;"></span>
+							</div>
+
+							<div class="grid-100 mobile-grid-100">
+								<p class="title comfirm">
+									Tu obra está en proceso de aprobación
+									<br><br>
+									Te enviaremos un correo cuando tu obra haya sido aprobada en nuestra tienda.
+									<br><br>
+									Gracias por confiar en nosotros
+									<br><br><br>
+									<a href="#">
+										Guía para vendedores de obras originales
+									</a>
+								</p>
+							</div>
+								
+							<div class="grid-100 mobile-grid-100">
+								<button class="button upload green u-margin-top-40" data-color="green">CREAR PRODUCTOS</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
 {% endblock %}
 
 
@@ -942,6 +985,10 @@ var work = {{work|json|safe}};
 $(function() {
 	$.cloudinary.config({{cloudinary.config()|json|safe}});
 	new APP.SellScreen();
+
+
+	$('#go-collection-modal').leanModal();
+	$('#go-share-modal').leanModal();
 });
 </script>
 {% endblock %}
