--- a/app/styles/tv.styl
+++ b/app/styles/tv.styl
@@ -91,7 +91,7 @@
 	max-width 1200px
 	margin 0 auto
 	display flex
-	justify-content space-between
+	justify-content space-around
 	flex-wrap wrap
 	margin-top 30px
 
@@ -145,3 +145,29 @@
 					font-size 10px
 					color #3c3d41
 					letter-spacing 1px
+@media (max-width:700px)
+	.shadow
+		.info
+			top 65% !important
+			h1
+				font-size 30px !important
+			p
+				font-size 15px !important
+			
+@media (max-width:450px)
+	.shadow
+		.info
+			h1
+				font-size 20px !important
+				margin-bottom 5px !important
+			p
+				font-size 10px !important
+				margin-bottom 10px !important
+			a
+				font-size 9px !important
+		header
+			h1
+				font-size 25px !important
+			a
+				font-size 7px !important
+				padding 12px 26px !important
