--- a/app/styles/tv-chapter.styl
+++ b/app/styles/tv-chapter.styl
@@ -4,8 +4,9 @@
 	display flex
 	justify-content space-between
 	flex-wrap wrap
+	padding 0 20px
 	.chapter-content
-		max-width 700px		
+		max-width 700px
 		h1
 			font-family 'Montserrat'
 			font-size 25px
